@@ -1,7 +1,26 @@
 <table border=0>
 <tr>
-<td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
+<td colspan=4 bgcolor=lightblue><b>2006-12-15</b>
 <tr bgcolor=lightgrey>
+<td>03:45
+<td>detar
+<td>
+configure.ac
+1.20<br>
+include/qop_internal.h
+1.6<br>
+lib/Makefile.am
+1.12<br>
+lib/asqtad_force_p.c
+1.4<br>
+lib/dw_invert_p.c
+1.7<br>
+<td>Add FNMAT algorithm for asqtad_force with option selection
+</tr>
+
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-12-14</b>
+<tr>
 <td>21:01
 <td>osborn
 <td>
@@ -19,7 +38,7 @@ lib/dw_invert_p.c
 <td><td>
 <td>tag <b>qopqdp0-7-6</b> added
 </tr>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:45
 <td>osborn
 <td>
@@ -41,7 +60,7 @@ Added preconditioner to DW inverter.
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-22</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>00:53
 <td>osborn
 <td>
@@ -52,7 +71,7 @@ lib/asqtad_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:54
 <td>osborn
 <td>
@@ -84,7 +103,7 @@ lib/invert_cg_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:32
 <td>osborn
 <td>
@@ -93,7 +112,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:26
 <td>osborn
 <td>
@@ -130,7 +149,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:52
 <td>osborn
 <td>
@@ -162,7 +181,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:02
 <td>osborn
 <td>
@@ -191,7 +210,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:23
 <td>osborn
 <td>
@@ -200,7 +219,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:16
 <td>osborn
 <td>
@@ -209,7 +228,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:12
 <td>osborn
 <td>
@@ -224,7 +243,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:09
 <td>osborn
 <td>
@@ -255,7 +274,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>13:32
 <td>osborn
 <td>
@@ -307,7 +326,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:12
 <td>osborn
 <td>
@@ -316,7 +335,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:09
 <td>osborn
 <td>
@@ -337,7 +356,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:01
 <td>osborn
 <td>
@@ -358,7 +377,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:21
 <td>osborn
 <td>
@@ -375,7 +394,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:44
 <td>osborn
 <td>
@@ -388,7 +407,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:32
 <td>osborn
 <td>
@@ -399,7 +418,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:51
 <td>osborn
 <td>
@@ -408,7 +427,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:48
 <td>osborn
 <td>
@@ -425,7 +444,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:54
 <td>osborn
 <td>
@@ -490,7 +509,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:05
 <td>osborn
 <td>
@@ -503,7 +522,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:23
 <td>osborn
 <td>
@@ -514,7 +533,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:21
 <td>osborn
 <td>
@@ -554,7 +573,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:12
 <td>osborn
 <td>
@@ -563,7 +582,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:55
 <td>osborn
 <td>
@@ -608,7 +627,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:50
 <td>osborn
 <td>
@@ -639,7 +658,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:17
 <td>osborn
 <td>
@@ -678,7 +697,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:47
 <td>osborn
 <td>
@@ -689,7 +708,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:23
 <td>osborn
 <td>
@@ -710,7 +729,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>06:16
 <td>osborn
 <td>
@@ -721,7 +740,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:41
 <td>osborn
 <td>
@@ -758,7 +777,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:03
 <td>osborn
 <td>
@@ -781,7 +800,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>02:02
 <td>osborn
 <td>
@@ -792,7 +811,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:51
 <td>osborn
 <td>
@@ -809,7 +828,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:26
 <td>osborn
 <td>
@@ -820,7 +839,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:58
 <td>osborn
 <td>
@@ -829,7 +848,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:52
 <td>osborn
 <td>
@@ -844,7 +863,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:24
 <td>osborn
 <td>
@@ -855,7 +874,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:34
 <td>osborn
 <td>
@@ -864,7 +883,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:36
 <td>osborn
 <td>
@@ -879,7 +898,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:26
 <td>osborn
 <td>
@@ -935,4 +954,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Thu Dec 14 22:16:38 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Thu Dec 14 23:17:24 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
